2024-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* README: Mark, what's not available on GNU ELPA.

2024-11-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test47-read-password)
	(tramp-test47-read-otp-password, tramp-test47-read-fingerprint):
	Use `tramp-default-remote-shell' and
	`tramp-connection-properties'.  Cleanup at the end.
	(tramp-test47-read-security-key): New test.

2024-11-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test47-read-fingerprint): New test.

2024-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* README: More details added.

	* tramp-tests.el (Commentary): Extend.
	(tramp--test-enabled): Exclude also old FUSE mount points from
	deletion.

2024-11-15  Michael Albinus  <michael.albinus@gmx.de>

	* README: Explain removal of temp files.

	* tramp-tests.el (tramp-test-name-prefix): New defconst.
	(tramp--test-make-temp-name, tramp-test40-make-nearby-temp-file)
	(tramp-test47-read-password, tramp-test47-read-otp-password):
	Use it.
	(tramp--test-enabled-checked): Move down.
	(tramp--test-enabled): Delete all Tramp temp files when
	environment variable $TRAMP_TEST_CLEANUP_TEMP_FILES is set.
	(tramp-test02-file-name-dissect-separate):
	Adapt `tramp-crypt-directories' according to syntax.
	(tramp-test47-read-password):
	Let-bind `tramp-connection-properties' instead of modifying
	`tramp-methods'.

2024-11-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (auth-source-cache-expiry): Set to nil.
	(tramp--test-enabled, tramp-test03-file-name-host-rules)
	(tramp-test26-interactive-file-name-completion): Keep debug
	messages when calling `tramp-cleanup-connection'.
	(tramp-test47-read-password): Test also `tramp-session-timeout'.

2024-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-enabled): Cleanup also
	`tramp-compat-temporary-file-directory'.
	(tramp--test-deftest-direct-async-process): Skip if underlying
	test didn't run or lasted too long.