@@ -1,3 +1,8 @@
+2024-12-03  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (ert-batch-backtrace-right-margin): Set it to nil.
+	(tramp--test-enabled): Fix regexps.
+
 2024-11-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	* README: Mark, what's not available on GNU ELPA.
